# ui

./: .gitignore  AGENTS.md  CONTEXT.md  HANDOFF-afsin-core-projection.md  HANDOFF.md  LICENSE  components.json  index.html  package.json  tsconfig.json  vite.config.ts
docs/: README.md  plan-remediation.md  web-ui-prd.md
docs/adr/: UI-001-design-system-tooling.md  UI-002-i18n-externalization.md  UI-003-router.md  UI-004-state-management.md  UI-005-realtime-sync.md  UI-006-motion-library.md  UI-007-keyboard-library.md  UI-008-test-stack.md  UI-009-chat-draft-persistence.md  UI-010-embedded-artifact-contract.md  UI-011-plan-graph-layout.md  UI-012-memory-graph-viz.md  UI-013-blast-radius-computation.md  UI-014-cost-panel.md  UI-015-config-schema.md  UI-016-audit-export-format.md  UI-017-auth-provider.md
docs/prd/: 01-foundation.md  02-shell-and-layout.md  03-chat-surface.md  04-plan-work-surface.md  05-memory-explorer.md  06-operator-console.md  07-configuration-and-audit.md  README.md  web-ui-ux-prd.md
docs/requirements/: web-ui-requirements.md
docs/tech/: web-ui-tech-doc.md
docs/ui-session/: 00-index.md  01-session-arc.md  02-decisions-summary.md  03-design-system.md  04-shell-and-layout.md  05-chat-surface.md  06-plan-view-and-multi-plan.md  07-memory-explorer.md  08-keyboard-and-states.md  09-configuration-and-profiles.md  (+2 more)
proto/: operator.proto
src/: CLAUDE.md  CONTEXT.md  index.css  routeTree.gen.ts  router.tsx
src-tauri/: AGENTS.md  CONTEXT.md  Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  pb.rs  state.rs  transport.rs
(+166 files in other folders)
